--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^6.1.0",
+		"firebase": "^4.6.0",
+		"native-base": "^2.3.3",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
-		"react-native-maps": "^0.17.1"
+		"react-native-elements": "^0.17.0",
+		"react-native-firebase": "^3.0.5",
+		"react-native-maps": "^0.17.1",
+		"react-native-vector-icons": "^4.4.2",
+		"react-navigation": "^1.0.0-beta.15"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
