--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
 		"react-native-elements": "^0.17.0",
+		"react-native-email": "^1.0.0",
 		"react-native-firebase": "^3.0.5",
 		"react-native-maps": "^0.17.1",
+		"react-native-phone-call": "^1.0.4",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.15"
 	},
