now only chart is left

--- a/ios/NewTempo/Info.plist
+++ b/ios/NewTempo/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Please choose a photo from your camera roll</string>
+	<string>Now you can access, utilise and manage your pics in your camera roll</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
@@ -67,5 +67,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Now you can take a photo to record the wonderful moment!</string>
 </dict>
 </plist>
