--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"native-base": "^2.3.3",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-camera": "^0.12.0",
 		"react-native-elements": "^0.17.0",
 		"react-native-email": "^1.0.0",
 		"react-native-firebase": "^3.0.5",
